--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,9 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "node-seal": "^4.3.8",
+    "secrets.js-grempe": "^2.0.0"
   },
   "devDependencies": {
     "eslint": "^7.5.0",
