--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "morgan": "~1.9.1",
     "node-seal": "^4.3.8",
     "secrets.js-grempe": "^2.0.0",
+    "solc": "^0.6.12",
     "web3": "^1.2.11"
   },
   "devDependencies": {
