Added JWT authentication

--- a/server/package.json
+++ b/server/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
+    "crypto": "^1.0.1",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "~1.9.1",
     "node-seal": "^4.3.8",
     "nodemailer": "^6.4.10",
