--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "crypto": "^1.0.1",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "fs-extra": "^9.0.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "jsonwebtoken": "^8.5.1",
@@ -21,8 +22,9 @@
     "morgan": "~1.9.1",
     "node-seal": "^4.3.8",
     "nodemailer": "^6.4.10",
+    "path": "^0.12.7",
     "secrets.js-grempe": "^2.0.0",
-    "solc": "^0.6.12",
+    "solc": "^0.7.1",
     "web3": "^1.2.11"
   },
   "devDependencies": {
