--- a/server/package.json
+++ b/server/package.json
@@ -10,26 +10,26 @@
     "node-test": "node -v"
   },
   "dependencies": {
-    "acorn": "^7.4.0",
+    "acorn": "^7.4.1",
     "bn.js": "^5.1.3",
     "chai": "^4.2.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
-    "express": "~4.16.1",
+    "express": "^4.17.1",
     "http-errors": "~1.6.3",
-    "jade": "~1.11.0",
     "jsonwebtoken": "^8.5.1",
-    "mathjs": "^7.2.0",
+    "mathjs": "^7.5.1",
     "mocha": "^8.1.3",
-    "mongoose": "^5.9.26",
+    "mongoose": "^5.10.9",
     "morgan": "~1.9.1",
     "node-forge": "^0.10.0",
-    "node-seal": "^4.3.8",
-    "nodemailer": "^6.4.10",
+    "node-seal": "^4.4.2",
+    "nodemailer": "^6.4.14",
+    "pug": "^3.0.0",
     "secrets.js-grempe": "^2.0.0"
   },
   "devDependencies": {
-    "eslint": "^7.5.0",
+    "eslint": "^7.11.0",
     "eslint-config-google": "^0.14.0",
     "eslint-formatter-gitlab": "^2.0.0"
   }
