--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
+    "start:dev": "MONGODB=mongodb://root:example@localhost:27017/admin node ./bin/www",
     "stop": "forever stopall",
     "start-server": "forever start ./bin/www",
     "test": "mocha --timeout 100000",
