--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -84,56 +84,56 @@ test-node-3:
   except:
     - master
 
-deploy-node-1:
-  stage: deploy-nodes
-  tags:
-    - s-vote-node-1
-  before_script:
-    - 'which ssh-agent || ( apt-get update -y && apt-get install openssh-client -y )'
-    - mkdir -p ~/.ssh
-    - eval $(ssh-agent -s)
-    - '[[ -f /.dockerenv ]] && echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config'
-    - 'which ping || ( apt-get update -y && apt-get install iputils-ping -y )'
-  script:
-    - ping -c 2 172.20.83.30
-    - ssh-add <(echo "$PRIVATE_KEY_NODE_1")
-    - rm -rf .git
-    - ssh -o StrictHostKeyChecking=no root@172.20.83.30 "rm -rf ~/${WORK_DIR}; mkdir -p ~/${WORK_DIR}; git init; git clone -b ${BRANCH} ${REPO}; cd ${WORK_DIR}; cd server; npm install; npm install forever -g; npm run test; npm run stop; npm run start-server"
-  only:
-    - master
+# deploy-node-1:
+#   stage: deploy-nodes
+#   tags:
+#     - s-vote-node-1
+#   before_script:
+#     - 'which ssh-agent || ( apt-get update -y && apt-get install openssh-client -y )'
+#     - mkdir -p ~/.ssh
+#     - eval $(ssh-agent -s)
+#     - '[[ -f /.dockerenv ]] && echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config'
+#     - 'which ping || ( apt-get update -y && apt-get install iputils-ping -y )'
+#   script:
+#     - ping -c 2 172.20.83.30
+#     - ssh-add <(echo "$PRIVATE_KEY_NODE_1")
+#     - rm -rf .git
+#     - ssh -o StrictHostKeyChecking=no root@172.20.83.30 "rm -rf ~/${WORK_DIR}; mkdir -p ~/${WORK_DIR}; git init; git clone -b ${BRANCH} ${REPO}; cd ${WORK_DIR}; cd server; npm install; npm install forever -g; npm run test; npm run stop; npm run start-server"
+#   only:
+#     - master
 
-deploy-node-2:
-  stage: deploy-nodes
-  tags:
-    - s-vote-node-2
-  before_script:
-    - 'which ssh-agent || ( apt-get update -y && apt-get install openssh-client -y )'
-    - mkdir -p ~/.ssh
-    - eval $(ssh-agent -s)
-    - '[[ -f /.dockerenv ]] && echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config'
-    - 'which ping || ( apt-get update -y && apt-get install iputils-ping -y )'
-  script:
-    - ping -c 2 172.20.83.32
-    - ssh-add <(echo "$PRIVATE_KEY_NODE_2")
-    - rm -rf .git
-    - ssh -o StrictHostKeyChecking=no root@172.20.83.32 "rm -rf ~/${WORK_DIR}; mkdir -p ~/${WORK_DIR}; git init; git clone -b ${BRANCH} ${REPO}; cd ${WORK_DIR}; cd server; npm install; npm install forever -g; npm run test; npm run stop; npm run start-server"
-  only:
-    - master
+# deploy-node-2:
+#   stage: deploy-nodes
+#   tags:
+#     - s-vote-node-2
+#   before_script:
+#     - 'which ssh-agent || ( apt-get update -y && apt-get install openssh-client -y )'
+#     - mkdir -p ~/.ssh
+#     - eval $(ssh-agent -s)
+#     - '[[ -f /.dockerenv ]] && echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config'
+#     - 'which ping || ( apt-get update -y && apt-get install iputils-ping -y )'
+#   script:
+#     - ping -c 2 172.20.83.32
+#     - ssh-add <(echo "$PRIVATE_KEY_NODE_2")
+#     - rm -rf .git
+#     - ssh -o StrictHostKeyChecking=no root@172.20.83.32 "rm -rf ~/${WORK_DIR}; mkdir -p ~/${WORK_DIR}; git init; git clone -b ${BRANCH} ${REPO}; cd ${WORK_DIR}; cd server; npm install; npm install forever -g; npm run test; npm run stop; npm run start-server"
+#   only:
+#     - master
 
-deploy-node-3:
-  stage: deploy-nodes
-  tags:
-    - s-vote-node-3
-  before_script:
-    - 'which ssh-agent || ( apt-get update -y && apt-get install openssh-client -y )'
-    - mkdir -p ~/.ssh
-    - eval $(ssh-agent -s)
-    - '[[ -f /.dockerenv ]] && echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config'
-    - 'which ping || ( apt-get update -y && apt-get install iputils-ping -y )'
-  script:
-    - ping -c 2 172.20.83.34
-    - ssh-add <(echo "$PRIVATE_KEY_NODE_3")
-    - rm -rf .git
-    - ssh -o StrictHostKeyChecking=no root@172.20.83.34 "rm -rf ~/${WORK_DIR}; mkdir -p ~/${WORK_DIR}; git init; git clone -b ${BRANCH} ${REPO}; cd ${WORK_DIR}; cd server; npm install; npm install forever -g; npm run test; npm run stop; npm run start-server"
-  only:
-    - master
+# deploy-node-3:
+#   stage: deploy-nodes
+#   tags:
+#     - s-vote-node-3
+#   before_script:
+#     - 'which ssh-agent || ( apt-get update -y && apt-get install openssh-client -y )'
+#     - mkdir -p ~/.ssh
+#     - eval $(ssh-agent -s)
+#     - '[[ -f /.dockerenv ]] && echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config'
+#     - 'which ping || ( apt-get update -y && apt-get install iputils-ping -y )'
+#   script:
+#     - ping -c 2 172.20.83.34
+#     - ssh-add <(echo "$PRIVATE_KEY_NODE_3")
+#     - rm -rf .git
+#     - ssh -o StrictHostKeyChecking=no root@172.20.83.34 "rm -rf ~/${WORK_DIR}; mkdir -p ~/${WORK_DIR}; git init; git clone -b ${BRANCH} ${REPO}; cd ${WORK_DIR}; cd server; npm install; npm install forever -g; npm run test; npm run stop; npm run start-server"
+#   only:
+#     - master
