Add local block explorer
Add dockerized block explorer, to use run command 'docker-compose -f docker-compose-explorer.yml up'. Blocks won't be mined anymore when there are no pedning transactions.

--- a/blockchain/docker-compose.yaml
+++ b/blockchain/docker-compose.yaml
@@ -10,7 +10,8 @@ services:
     networks:
       svote_ethereum:
         ipv4_address: 172.16.238.10
-    command: --http --http.port 8880 --http.addr "0.0.0.0" --ipcdisable --datadir /blockchain --http.api "admin,personal,eth,net,web3" --networkid 1337 --allow-insecure-unlock --port 30300 --nodiscover --password /blockchain/password.txt --unlock 0xa5EFDe8c0F99b444dFC9c415A98ab93D5Dc2ac9F --nat extip:172.16.238.10 --nousb --miner.gasprice 0 --syncmode full
+    command: --http --http.port 8880 --http.addr "0.0.0.0" --http.vhosts "*" --ipcdisable --datadir /blockchain --http.api "admin,personal,eth,net,web3" --networkid 1337 --allow-insecure-unlock --port 30300 --nodiscover --password /blockchain/password.txt --unlock 0xa5EFDe8c0F99b444dFC9c415A98ab93D5Dc2ac9F --nat extip:172.16.238.10 --nousb --miner.gasprice 0 --syncmode full
+
   node1:
     build:
       context: .
@@ -20,7 +21,8 @@ services:
     networks:
       svote_ethereum:
         ipv4_address: 172.16.238.11
-    command: --http --http.port 8881 --http.addr "0.0.0.0" --ipcdisable --datadir /node1 --http.api "admin,personal,eth,net,web3,miner" --networkid 1337 --allow-insecure-unlock --port 30301 --nodiscover --password /node1/password.txt --unlock 0x6e94d071E5274Bdfec7c6c7aEbBb8c7c230ab271 --nat extip:172.16.238.11 --nousb --miner.gasprice 0 --miner.etherbase 0x6e94d071E5274Bdfec7c6c7aEbBb8c7c230ab271 --syncmode full --mine 
+    command: --http --http.port 8881 --http.addr "0.0.0.0" --http.vhosts "*" --ipcdisable --datadir /node1 --http.api "admin,personal,eth,net,web3,miner" --networkid 1337 --allow-insecure-unlock --port 30301 --nodiscover --password /node1/password.txt --unlock 0x6e94d071E5274Bdfec7c6c7aEbBb8c7c230ab271 --nat extip:172.16.238.11 --nousb --miner.gasprice 0 --miner.etherbase 0x6e94d071E5274Bdfec7c6c7aEbBb8c7c230ab271 --syncmode full --mine 
+  
   node2:
     build:
       context: .
@@ -30,7 +32,8 @@ services:
     networks:
       svote_ethereum:
         ipv4_address: 172.16.238.12
-    command: --http --http.port 8882 --http.addr "0.0.0.0" --ipcdisable --datadir /node2 --http.api "admin,personal,eth,net,web3,miner" --networkid 1337 --allow-insecure-unlock --port 30302 --nodiscover --password /node2/password.txt --unlock 0xD2640f08100b1aF79b86995B04c6bcF98EbB4d3c --nat extip:172.16.238.12 --nousb --miner.gasprice 0 --miner.etherbase 0xD2640f08100b1aF79b86995B04c6bcF98EbB4d3c --syncmode full --mine
+    command: --http --http.port 8882 --http.addr "0.0.0.0" --http.vhosts "*" --ipcdisable --datadir /node2 --http.api "admin,personal,eth,net,web3,miner" --networkid 1337 --allow-insecure-unlock --port 30302 --nodiscover --password /node2/password.txt --unlock 0xD2640f08100b1aF79b86995B04c6bcF98EbB4d3c --nat extip:172.16.238.12 --nousb --miner.gasprice 0 --miner.etherbase 0xD2640f08100b1aF79b86995B04c6bcF98EbB4d3c --syncmode full --mine
+    
   node3:
     build:
       context: .
@@ -40,14 +43,20 @@ services:
     networks:
       svote_ethereum:
         ipv4_address: 172.16.238.13
-    command: --http --http.port 8883 --http.addr "0.0.0.0" --ipcdisable --datadir /node3 --http.api "admin,personal,eth,net,web3,miner" --networkid 1337 --allow-insecure-unlock --port 30303 --nodiscover --password /node3/password.txt --unlock 0x3B7E744E81751025B6A772211d32F57670dD0F47 --nat extip:172.16.238.13 --nousb --miner.gasprice 0 --miner.etherbase 0x3B7E744E81751025B6A772211d32F57670dD0F47 --syncmode full --mine
+    command: --http --http.port 8883 --http.addr "0.0.0.0" --http.vhosts "*" --ipcdisable --datadir /node3 --http.api "admin,personal,eth,net,web3,miner" --networkid 1337 --allow-insecure-unlock --port 30303 --nodiscover --password /node3/password.txt --unlock 0x3B7E744E81751025B6A772211d32F57670dD0F47 --nat extip:172.16.238.13 --nousb --miner.gasprice 0 --miner.etherbase 0x3B7E744E81751025B6A772211d32F57670dD0F47 --syncmode full --mine
+  
   mongodb:
     image: mongo:latest
-    environment:
-      MONGO_INITDB_ROOT_USERNAME: 'root'
-      MONGO_INITDB_ROOT_PASSWORD: 'example'
+    # environment:
+    #   MONGO_INITDB_ROOT_USERNAME: 'root'
+    #   MONGO_INITDB_ROOT_PASSWORD: 'example'
+    entrypoint: mongod --logpath=/dev/null --bind_ip "0.0.0.0"
     ports:
       - "27017:27017"
+    networks:
+      svote_ethereum:
+        ipv4_address: 172.16.238.14
+  
   mongo-express:
     image: mongo-express:latest
     depends_on:
@@ -55,12 +64,16 @@ services:
     ports:
       - "8081:8081"
     environment:
-      ME_CONFIG_MONGODB_ADMINUSERNAME: 'root'
-      ME_CONFIG_MONGODB_ADMINPASSWORD: 'example'
+      # ME_CONFIG_MONGODB_ADMINUSERNAME: 'root'
+      # ME_CONFIG_MONGODB_ADMINPASSWORD: 'example'
       ME_CONFIG_MONGODB_SERVER: 'mongodb'
+    networks:
+      svote_ethereum:
+        ipv4_address: 172.16.238.15
 
 networks:
   svote_ethereum:
+    name: svote_ethereum
     ipam:
       driver: default
       config:
