--- a/blockchain/docker-compose.yaml
+++ b/blockchain/docker-compose.yaml
@@ -47,10 +47,10 @@ services:
   
   mongodb:
     image: mongo:latest
-    # environment:
-    #   MONGO_INITDB_ROOT_USERNAME: 'root'
-    #   MONGO_INITDB_ROOT_PASSWORD: 'example'
-    entrypoint: mongod --logpath=/dev/null --bind_ip "0.0.0.0"
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: 'root'
+      MONGO_INITDB_ROOT_PASSWORD: 'example'
+    # entrypoint: mongod --logpath=/dev/null --bind_ip "0.0.0.0"
     ports:
       - "27017:27017"
     networks:
@@ -64,8 +64,8 @@ services:
     ports:
       - "8081:8081"
     environment:
-      # ME_CONFIG_MONGODB_ADMINUSERNAME: 'root'
-      # ME_CONFIG_MONGODB_ADMINPASSWORD: 'example'
+      ME_CONFIG_MONGODB_ADMINUSERNAME: 'root'
+      ME_CONFIG_MONGODB_ADMINPASSWORD: 'example'
       ME_CONFIG_MONGODB_SERVER: 'mongodb'
     networks:
       svote_ethereum:
