--- a/server/package.json
+++ b/server/package.json
@@ -27,10 +27,11 @@
     "node-forge": "^0.10.0",
     "node-seal": "^4.4.2",
     "nodemailer": "^6.4.14",
-    "pug": "^3.0.0",
     "path": "^0.12.7",
+    "pug": "^3.0.0",
     "secrets.js-grempe": "^2.0.0",
     "solc": "^0.7.1",
+    "truffle-contract": "^4.0.31",
     "web3": "^1.2.11"
   },
   "devDependencies": {
