--- a/client/package.json
+++ b/client/package.json
@@ -3,17 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.8",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
     "bn.js": "^5.1.3",
     "bootstrap": "^4.5.3",
+    "ra-data-simple-rest": "^3.10.4",
     "react": "^17.0.1",
-    "react-bootstrap": "^1.4.0",
+    "react-admin": "^3.11.2",
+    "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
+    "react-html-parser": "^2.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "truffle-contract": "^4.0.31",
+    "typescript": "^4.1.3",
     "web-vitals": "^0.2.4",
     "web3": "^1.3.1"
   },
