--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,9 @@
   },
   "dependencies": {
     "acorn": "^7.4.1",
+    "bcryptjs": "^2.4.3",
     "bn.js": "^5.1.3",
+    "body-parser": "^1.19.0",
     "chai": "^4.2.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
