--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.6.0",
     "bn.js": "^5.1.3",
     "bootstrap": "^4.5.3",
+    "cypress": "^6.2.1",
     "ra-data-simple-rest": "^3.10.4",
     "react": "^17.0.1",
     "react-admin": "^3.11.2",
@@ -26,7 +27,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "cypress": "cypress open"
   },
   "eslintConfig": {
     "extends": [
