--- a/server/package.json
+++ b/server/package.json
@@ -34,6 +34,7 @@
     "secrets.js-grempe": "^2.0.0",
     "solc": "^0.7.1",
     "truffle-contract": "^4.0.31",
+    "uuid": "^8.3.2",
     "web3": "^1.2.11"
   },
   "devDependencies": {
